--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,8 +1,10 @@
+# Библиотеки
+
 [versions]
 androidx-lifecycle = "2.9.5"
 composeHotReload = "1.0.0-rc02"
 composeMultiplatform = "1.9.1"
-kotlin = "2.2.20"
+kotlin = "2.0.10"
 kotlinx-coroutines = "1.10.2"
 
 [libraries]
@@ -12,7 +14,6 @@ androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 
 [plugins]
-composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
-composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
